tests/positive/pr112_discrete_case.safe
-- Test: pr112_discrete_case
-- Description: Boolean and integer case statements plus direct string returns.
-- Expected: ACCEPT

package PR112_Discrete_Case

   function Flag_Value (Flag : in Boolean) returns Integer

      case Flag
         when True
            return 1;

         when others
            return 0;




   function Opcode_Name (Opcode : in Integer) returns String

      case Opcode
         when -1
            return "reset";

         when 0
            return "nop";

         when 1
            return "load";

         when others
            return "unknown";





