tests/negative/neg_case_missing_others.safe
-- Test: neg_case_missing_others
-- Description: Every PR11.2 case statement requires a final others arm.
-- Expected: REJECT source_frontend_error

package neg_case_missing_others

   function classify (value : in integer) returns integer

      case value
         when 1
            return 1;

